# virmon

./: .gitignore  Components  DRIVER_BUILD_GUIDE.md  README.md  Retarget  System Architecture.txt  build_driver.bat  build_driver_fixed.bat  build_installer.bat  fix_driver_build.ps1  native_java_second_screen_diagrams_spec.md
AndroidReceiver/: build_apk.bat  keystore.properties  settings.gradle
AndroidReceiver/app/: build.gradle
AndroidReceiver/app/src/main/: AndroidManifest.xml
AndroidReceiver/app/src/main/java/com/virmon/android/: MainActivity.java  NetworkClient.java  VideoDecoder.java
AndroidReceiver/app/src/main/res/xml/: accessory_filter.xml
WindowsSender/: CMakeLists.txt  CaptureService.cpp  DeviceInstaller.cpp  Driver.cpp  Driver.h  Encoder.h  EncoderMF.cpp  EncoderNVENC.cpp  EncoderWIC.cpp  NetworkDiscovery.cpp  NetworkTransport.cpp  README.md  SignDriver.ps1  Transport.cpp  VirMonDriver.inf  VirMonDriver.vcxproj  VirMonSetup.iss  install_driver.ps1
